# synteny_visualization

./: README.md  pyproject.toml
examples/: tigd4_synteny.json
examples/synteny/: synteny_anolis_region.csv  synteny_attributes.csv  synteny_canary_region.csv  synteny_chiken_region.csv  synteny_danio_rerio_region.csv  synteny_human_region.csv  synteny_mouse_region.csv  synteny_quail_region.csv  synteny_xenopus_laevis_L_region.csv  synteny_xenopus_laevis_S_region.csv  synteny_xenopus_tropicales_region.csv  synteny_zebra_finch_region.csv  tigd4_real.json
synteny_viz/: __init__.py  cli.py  models.py  rearrangements.py  visualizer.py
synteny_viz/converters/: __init__.py  bed.py  builder.py  csv_synteny.py  gff.py  orthology.py
